[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
actix-web = "4.0.1"
actix-cors = "0.6.1"
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4.4", features = [
    "sqlite",
    "uuidv07",
    "r2d2",
    "chrono",
] }
actix-rt = "2.7.0"
anyhow = "1.0"
jsonwebtoken = "8.1.0"
warp = "0.3.2"
thiserror = "1.0"
derive_more = "0.99.17"
futures = '0.3.21'
